Minor grid bug fixed

--- a/style/less/grid.less
+++ b/style/less/grid.less
@@ -109,11 +109,10 @@
 			&:not(:first-child) {
 				margin-top: 10px;
 			}
-			.offset1,
-			.offset2,
-			.offset3:first-child {
+			&.offset1,
+			&.offset2,
+			&.offset3:first-child {
 				margin-left: 0;
-				
 			}
 		}
 	}
