--- a/style/less/screen.less
+++ b/style/less/screen.less
@@ -59,7 +59,7 @@ ul > li {
 }
 ul > li, a.arrow {
 	padding-left: 1.2em;
-	background: url(grafik/leder-menu-marker-arrows.gif) no-repeat .2em .4em;
+	background: url(../../grafik/leder-menu-marker-arrows.gif) no-repeat .2em .4em;
 }
 
 a {
