--- a/style/css/screen.css
+++ b/style/css/screen.css
@@ -7,7 +7,7 @@
 .row>.offset1{margin-left:26.566666666666666%;}.row>.offset1:first-child{margin-left:25.333333333333332%;}
 .row>.offset2{margin-left:52%;}.row>.offset2:first-child{margin-left:50.666666666666664%;}
 .row>.offset3:first-child{margin-left:76%;}
-@media screen and (max-width:700px) and (min-width:501px){.row>.span1,.row>.span2,.row>.span1+.span3{width:49.333333333333336%;} .row>.span3:first-child{width:100%;margin-left:0;}.row>.span3:first-child+.span1,.row>.span3:first-child+.span2{margin-left:0;margin-top:10px;} .row>.span1:nth-of-type(3){margin-left:0;margin-top:10px;} .row>.span1:nth-of-type(4){margin-top:10px;} .row>.span2:nth-of-type(3){margin-top:10px;margin-left:0;width:100%;} .row>.offset1,.row>.offset2{margin-left:0;}.row>.offset1:first-child,.row>.offset2:first-child{margin-left:0;} .row>.offset3:first-child{margin-left:50.666666666666664%;}}@media screen and (max-width:500px){.row>.span1,.row>.span2,.row>.span3{margin-left:0;width:100%;}.row>.span1:not(:first-child),.row>.span2:not(:first-child),.row>.span3:not(:first-child){margin-top:10px;} .row>.span1 .offset1,.row>.span2 .offset1,.row>.span3 .offset1,.row>.span1 .offset2,.row>.span2 .offset2,.row>.span3 .offset2,.row>.span1 .offset3:first-child,.row>.span2 .offset3:first-child,.row>.span3 .offset3:first-child{margin-left:0;}}
+@media screen and (max-width:700px) and (min-width:501px){.row>.span1,.row>.span2,.row>.span1+.span3{width:49.333333333333336%;} .row>.span3:first-child{width:100%;margin-left:0;}.row>.span3:first-child+.span1,.row>.span3:first-child+.span2{margin-left:0;margin-top:10px;} .row>.span1:nth-of-type(3){margin-left:0;margin-top:10px;} .row>.span1:nth-of-type(4){margin-top:10px;} .row>.span2:nth-of-type(3){margin-top:10px;margin-left:0;width:100%;} .row>.offset1,.row>.offset2{margin-left:0;}.row>.offset1:first-child,.row>.offset2:first-child{margin-left:0;} .row>.offset3:first-child{margin-left:50.666666666666664%;}}@media screen and (max-width:500px){.row>.span1,.row>.span2,.row>.span3{margin-left:0;width:100%;}.row>.span1:not(:first-child),.row>.span2:not(:first-child),.row>.span3:not(:first-child){margin-top:10px;} .row>.span1.offset1,.row>.span2.offset1,.row>.span3.offset1,.row>.span1.offset2,.row>.span2.offset2,.row>.span3.offset2,.row>.span1.offset3:first-child,.row>.span2.offset3:first-child,.row>.span3.offset3:first-child{margin-left:0;}}
 @font-face{font-family:'GlobalMenu';font-style:normal;font-weight:normal;src:local('MetaNormal-Roman'),url('menuglobal.ttf') format('opentype');}@font-face{font-family:'Heading';font-style:normal;font-weight:bold;src:local('MetaBold-Roman'),url('menu1.ttf') format('opentype');}*{margin:0;padding:0;}
 body{background-color:#42678b;font-family:Verdana,Geneva,Arial,Helvetica,sans-serif;font-size:.75em;}
 article{display:block;}
@@ -21,7 +21,7 @@ hgroup h1,hgroup h2,hgroup h3,hgroup h4,hgroup h5{padding-top:0.2em;}
 p,ul,ol{margin:.5em 0;}
 ol{padding-left:1.5em;margin-left:.2em;}
 ul>li{list-style:none;}
-ul>li,a.arrow{padding-left:1.2em;background:url(grafik/leder-menu-marker-arrows.gif) no-repeat 0.2em 0.4em;}
+ul>li,a.arrow{padding-left:1.2em;background:url(../../grafik/leder-menu-marker-arrows.gif) no-repeat 0.2em 0.4em;}
 a{color:#000;}
 .hidden{display:none!important;}
 #global-top>div,#pagewrapper,footer{width:990px;margin:auto;padding:10px;}
