Smaller font size for small devices

--- a/style/css/screen.css
+++ b/style/css/screen.css
@@ -43,4 +43,4 @@ footer{top:0;left:0;right:0;height:15px;background-image:-webkit-linear-gradient
 #local-navigation-first-level a{text-transform:uppercase;text-decoration:none;}
 #news-rotator{position:relative;height:200px;}#news-rotator div{height:200px;}
 #news-rotator .span1{position:absolute;top:0;right:0;margin-top:0;}
-@media screen and (max-width:1000px){#global-top>div,#pagewrapper,footer{width:auto;}}@media screen and (max-width:900px){#groups{display:none;} #content{margin-right:10px;}}
+@media screen and (max-width:1000px){#global-top>div,#pagewrapper,footer{width:auto;}}@media screen and (max-width:900px){#groups{display:none;} #content{margin-right:10px;}}@media screen and (max-width:500px){body{font-size:.6em;}}
