Modify user menu to have one link and add lock icon

--- a/style/less/screen.less
+++ b/style/less/screen.less
@@ -136,8 +136,15 @@ footer {
 		&.user {
 			display: block;
 			float: right;
-			margin-top: .8em;
-			
+			margin-top: .6em;
+			li {
+				height: 1.1em;
+				padding-top: 4px;
+				padding-right: 1.7em;
+				background-image: url('../../grafik/lock.png');
+				background-repeat: no-repeat;
+				background-position: right top;
+			}
 			a {
 				color: darken(@globalNavTextColor, 50);
 			}
