--- a/style/less/vars.less
+++ b/style/less/vars.less
@@ -53,6 +53,10 @@
 	border-radius: @r;
 }
 
+.column-count(@count) {
+	-webkit-column-count: @count;
+}
+
 .transition(@property: all, @time: .5s, @transition: ease-in-out) {
 	-webkit-transition: @arguments;
 }
