Simple content snippet style added. Lots of minor style tweaks

--- a/style/less/screen.less
+++ b/style/less/screen.less
@@ -9,6 +9,7 @@ body {
 	background-color: @backgroundColor;
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: .75em;
+	-webkit-text-size-adjust: none;
 }
 
 article {
@@ -262,10 +263,11 @@ footer {
 }
 
 #news-rotator {
-	position: relative;
-	
 	@newsHeight: 200px;
+	
+	position: relative;
 	height: @newsHeight;
+	.default-border();
 	
 	div {
 		height: @newsHeight;
@@ -282,6 +284,13 @@ footer {
 
 	}
 	
+}
+
+.content-snippet {
+	.default-border(2px);
+	background-color: #f5f5f5;
+	padding: 0 .5em 0;
+	margin-bottom: .3em;
 }
 
 @media screen and (max-width: 1000px) {
@@ -337,17 +346,7 @@ footer {
 		}
 	}
 }
-@media screen and (max-width: 400px) {
-	body {
-		font-size: .4em;
-	}
-	#global-top {
-		height: 25px;
-		line-height: 2.2em;
-	}
-	#pagewrapper {
-		margin-top: 25px;
-	}
+@media screen and (max-width: 450px) {
 	#local-navigation-first-level ol {
 		.column-count(3);
 		
@@ -359,5 +358,22 @@ footer {
 				padding-left: .5em;
 			}
 		}
+	}
+}
+@media screen and (max-width: 400px) {
+	body {
+		font-size: .4em;
+	}
+	#global-top {
+		height: 25px;
+		line-height: 2.2em;
+	}
+	#pagewrapper {
+		margin-top: 25px;
+	}
+}
+@media screen and (max-width: 300px) {
+	#local-navigation-first-level ol {
+		.column-count(2);
 	}
 }
