Background texture and logo trees added

--- a/style/less/vars.less
+++ b/style/less/vars.less
@@ -6,7 +6,9 @@
 
 @backgroundColor: #42678b;
 @contentBackgroundColor: #F3F0F0;
-@groupsBackgroundColor: rgba(230, 226, 207, 0.8);
+//@groupsBackgroundColor: rgba(230, 226, 207, 0.8); // Gennemsigtig brun
+@groupsBackgroundColor: #DCDCE0; // Blågrå
+@groupsBackgroundColor: rgba(170, 180, 200, .2);// Gennemsigtig blågrå
 @globalNavTextColor: #888;
 
 
@@ -62,7 +64,7 @@
 }
 
 .default-border(@r: 5px) {
-	border: 3px solid #fff;
+	border: 3px solid #fafafa;
 	.border-radius(@r);
 	.box-shadow();
 }
