--- a/style/less/screen.less
+++ b/style/less/screen.less
@@ -6,7 +6,7 @@
 }
 
 body {
-	background-color: @backgroundColor;
+	background: @backgroundColor url(../../grafik/background-texture.jpg) repeat-x;
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: .75em;
 	-webkit-text-size-adjust: none;
@@ -157,7 +157,7 @@ footer {
 	position: relative;
 	margin-top: 35px;
 	padding-right: 0;
-	background-color: @contentBackgroundColor;
+	background: @contentBackgroundColor url('../../grafik/logo-trees.png') no-repeat -40px 10px;
 	.box-shadow();
 	overflow: hidden;
 }
@@ -228,7 +228,7 @@ footer {
 
 #local-navigation-first-level {
 	font-family: Heading;
-	
+
 	h1 {
 		text-transform: none;
 		font-size: 4em;
@@ -268,10 +268,15 @@ footer {
 	position: relative;
 	height: @newsHeight;
 	.default-border();
-	background-color: #fff;
+	background-color: #fafafa;
 	
 	div {
 		height: @newsHeight;
+	}
+	
+	.news-item {
+		.border-radius(3px);
+		overflow: hidden;
 	}
 	
 	.span1 {
@@ -294,7 +299,7 @@ footer {
 
 .content-snippet {
 	.default-border(2px);
-	background-color: #f5f5f5;
+	background-color: #fafafa;
 	padding: 0 .5em 0;
 	margin: .3em;
 	
@@ -304,6 +309,9 @@ footer {
 }
 
 @media screen and (max-width: 1000px) {
+	body {
+		background: @backgroundColor;
+	}
 	#global-top > div,
 	#pagewrapper,
 	footer {
@@ -346,6 +354,9 @@ footer {
 	}
 }
 @media screen and (max-width: 550px) {
+	#pagewrapper {
+		background-position: -40px 20px;
+	}
 	#local-navigation-first-level {
 		h1 {
 			display: none;
@@ -357,6 +368,9 @@ footer {
 	}
 }
 @media screen and (max-width: 450px) {
+	#pagewrapper {
+		background-position: -40px 40px;
+	}
 	#local-navigation-first-level ol {
 		margin-top: -.7em;
 		
@@ -385,6 +399,7 @@ footer {
 	}
 	#pagewrapper {
 		margin-top: 25px;
+		background-position: -40px 60px;
 	}
 }
 @media screen and (max-width: 300px) {
