--- a/style/less/screen.less
+++ b/style/less/screen.less
@@ -6,7 +6,7 @@
 }
 
 body {
-	background: @backgroundColor url(../../grafik/background-texture.jpg) repeat-x;
+	background: @backgroundColor url(../../grafik/background-texture.jpg) repeat-x 70% 0;
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: .75em;
 	-webkit-text-size-adjust: none;
