New right-content structure and usage of content-snippets for FCE purpsoe

--- a/style/less/screen.less
+++ b/style/less/screen.less
@@ -224,6 +224,10 @@ footer {
 	.box-shadow-inset();
 	margin: -2px -2px -2px 0;
 	//font-size: 0.9em;
+	.content-snippet {
+		padding: 0;
+		margin: 0;
+	}
 }
 
 #local-navigation-first-level {
@@ -301,9 +305,9 @@ footer {
 .content-snippet {
 	.default-border(2px);
 	background-color: #fafafa;
-	padding: 0 .5em 0;
+	//padding: 0 .5em 0;
+	padding: 0;
 	margin: .3em;
-	
 	h1 {
 		font-size: 1.3em;
 	}
