--- a/style/less/vars.less
+++ b/style/less/vars.less
@@ -6,9 +6,9 @@
 
 @backgroundColor: #42678b;
 @contentBackgroundColor: #F3F0F0;
-//@groupsBackgroundColor: rgba(230, 226, 207, 0.8); // Gennemsigtig brun
-@groupsBackgroundColor: #DCDCE0; // Blågrå
-@groupsBackgroundColor: rgba(170, 180, 200, .2);// Gennemsigtig blågrå
+@groupsBackgroundColor: rgba(230, 226, 207, 0.8); // Gennemsigtig brun
+//@groupsBackgroundColor: #DCDCE0; // Blågrå
+//@groupsBackgroundColor: rgba(170, 180, 200, .2);// Gennemsigtig blågrå
 @globalNavTextColor: #888;
 
 
