--- a/style/less/vars.less
+++ b/style/less/vars.less
@@ -50,6 +50,11 @@
 	-moz-box-shadow: @arguments inset;
 	-webkit-box-shadow: @arguments inset;
 }
+.no-box-shadow() {
+	box-shadow: none;
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+}
 
 .border-radius(@r: 5px) {
 	border-radius: @r;
