Font size for really small screens increased

--- a/style/less/screen.less
+++ b/style/less/screen.less
@@ -434,6 +434,7 @@ footer {
 		}
 	}
 }
+/* Disabled. It got a little too small on mobile devices - THG
 @media screen and (max-width: 400px) {
 	body {
 		font-size: .5em;
@@ -447,6 +448,7 @@ footer {
 		background-position: -40px 60px;
 	}
 }
+*/
 @media screen and (max-width: 300px) {
 	#local-navigation-first-level ol {
 		> li {
