IE10 metro view snap mode now supported

--- a/style/less/screen.less
+++ b/style/less/screen.less
@@ -1,3 +1,8 @@
+// IE doens't understand the viewport meta tag, but uses a -ms-version the official standard instead. THG
+@-ms-viewport{
+    width: device-width;
+}
+
 @import "vars.less";
 
 * {
